interface for db
