# subscriptions/docs/swagger.json
@@ -43,6 +43,12 @@
                             "$ref": "#/definitions/schemas.PaginationResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
